--- a/style.css
+++ b/style.css
@@ -50,3 +50,12 @@ body
   font-family: Comic Sans MS , Arial, Verdana, sans-serif;
   font-size:200%;
 }
+
+.fight
+{
+	font-family: Comic Sans MS , Arial, Verdana, sans-serif;
+	color: #DC143C ;
+	font-size:150%
+	
+	
+}
